<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="1.0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:textAlignment="center"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/buttonMainToGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_gallery" />

        <Button
            android:id="@+id/buttonMainToQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_quiz" />

        <Button
            android:id="@+id/buttonMainExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit" />
    </LinearLayout>
</LinearLayout>