<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rycyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- First button in the chain: Addpicture -->
            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_picture"
                android:backgroundTint="@color/blueBlack"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Sortbutton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread" />

            <!-- Second button in the chain: Sort -->
            <Button
                android:id="@+id/btnSortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_desc"
                android:backgroundTint="@color/blueBlack"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btnPickImage"
                app:layout_constraintEnd_toStartOf="@+id/btnSortAsc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/btnSortAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_asc"
                android:backgroundTint="@color/blueBlack"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btnSortDesc"
                app:layout_constraintEnd_toStartOf="@+id/buttonGalleryExit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <!-- Third button in the chain: Quiz -->
            <Button
                android:id="@+id/buttonGalleryExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_exit"
                android:backgroundTint="@color/blueBlack"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btnSortAsc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>
